--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
     "swr": "^2.2.5",
     "uuid": "^9.0.1"
