--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/material": "^5.15.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "axios": "^1.6.8",
+    "highcharts": "^11.4.3",
+    "highcharts-react-official": "^3.2.1",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
