--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
+    "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "axios": "^1.6.8",
