--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.11.4",
+    "@emotion/react": "^11.13.0",
     "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/joy": "^5.0.0-beta.36",
-    "@mui/material": "^5.15.13",
+    "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "axios": "^1.6.8",
     "highcharts": "^11.4.3",
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.8",
     "swr": "^2.2.5",
     "uuid": "^9.0.1"
