--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "styled-components": "^6.1.8",
