--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "axios": "^1.6.8",
     "highcharts": "^11.4.3",
     "highcharts-react-official": "^3.2.1",
+    "jspdf": "^2.5.1",
     "next": "14.1.3",
     "react": "^18",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
